<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>dbcppp</name>
  <version>1.0.0</version>
  <description>A C/C++ DBC file parser based on `boost.spirit`.</description>
  <maintainer email="russ.webber@greenroomrobotics.com">Russ Webber</maintainer>
  <license>BSL</license>

  <url type="website">https://github.com/Greenroom-Robotics/dbcppp</url>

  <depend>libxml2</depend>
  <depend>boost</depend>
  <depend>libxmlmm</depend>
  <depend>libcxxopts</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
